--- a/views/all-products.handlebars
+++ b/views/all-products.handlebars
@@ -1,5 +1,4 @@
 <button class = "button expanded large" id = "category-header">Piano Category</button>
-
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
        <div id= "information-btn">
@@ -35,7 +34,7 @@
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
                             <h4>SKU: 100111</h4>
-                            <h3 id = "item-name">Piano Electric Autotune</h3>
+                            <h3 id = "item-name">Piano Electric</h3>
                             <h4>Price: $3854.99</h4>
                             <h4>In Stock: 06</h4>
                         </div>
@@ -140,8 +139,8 @@
             </a>
         </div>
     </div>        
-</div>       
-<button class = "button expanded large" id = "category-header">Live Sound Category</button>      
+</div>        
+<button class = "button expanded large" id = "category-header">Live Sound Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
         <div id= "information-btn">
@@ -154,10 +153,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 300101</h4>
-                            <h3 id = "item-name">Yamaha 4 Ch: console</h3>
-                            <h4>Price: $1699.99</h4>
-                            <h4>In Stock: 03</h4>
+                            <h5>SKU: 300101</h5>
+                            <h4 id = "item-name">Yamaha 4 Channel</h4>
+                            <h5>Price: $1699.99</h5>
+                            <h5>In Stock: 03</h5>
                         </div>
                     </div>                             
                 </div>
@@ -198,10 +197,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 300121</h4>
-                            <h3 id = "item-name">Yamaha MG16XU Mixer</h3>
-                            <h4>Price: $549.99</h4>
-                            <h4>In Stock: 04</h4>
+                            <h5>SKU: 300121</h5>
+                            <h4 id = "item-name">Yamaha MG16XU</h4>
+                            <h5>Price: $549.99</h5>
+                            <h5>In Stock: 04</h5>
                         </div>
                     </div>                    
                 </div>                  
@@ -211,7 +210,7 @@
             </a>
         </div>
     </div>        
-</div>       
+</div>           
 <button class = "button expanded large" id = "category-header">Drum and Percussion Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
@@ -284,7 +283,7 @@
         </div>
     </div>        
 </div>       
-<button class = "button expanded large" id = "category-header">Keyboard Category</button>      
+<button class = "button expanded large" id = "category-header">Keyboard Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
        <div id= "information-btn">
@@ -297,10 +296,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 500101</h4>
-                            <h3 id = "item-name">Casio Keyboard Automatic</h3>
-                            <h4>Price: $673.99</h4>
-                            <h4>In Stock: 06</h4>
+                            <h5>SKU: 500101</h5>
+                            <h4 id = "item-name">Casio Keyboard</h4>
+                            <h5>Price: $673.99</h5>
+                            <h5>In Stock: 06</h5>
                         </div>
                     </div>                                 
                 </div>
@@ -319,10 +318,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 500111</h4>
-                            <h3 id = "item-name">Electric Keyboard General</h3>
-                            <h4>Price: $205.29</h4>
-                            <h4>In Stock: 05</h4>
+                            <h5>SKU: 500111</h5>
+                            <h4 id = "item-name">Electric Keyboard</h4>
+                            <h5>Price: $205.29</h5>
+                            <h5>In Stock: 05</h5>
                         </div>
                     </div>                    
                 </div>                  
@@ -341,10 +340,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 500121</h4>
-                            <h3 id = "item-name">Yahamaha PSP Autotune</h3>
-                            <h4>Price: $539.99</h4>
-                            <h4>In Stock: 03</h4>
+                            <h5>SKU: 500121</h5>
+                            <h4 id = "item-name">Yahamaha Autotune</h4>
+                            <h5>Price: $539.99</h5>
+                            <h5>In Stock: 03</h5>
                         </div>
                     </div>                   
                 </div>                  
@@ -354,7 +353,7 @@
             </a>
         </div>    
     </div>        
-</div>       
+</div>            
 <button class = "button expanded large" id = "category-header">Music Lesson Category</button>      
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
@@ -368,10 +367,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 600101</h4>
-                            <h3 id = "item-name">Music Lesson Guitar</h3>
-                            <h4>Price: $899.99</h4>
-                            <h4>In Stock: 02</h4>
+                            <h5>SKU: 600101</h5>
+                            <h4 id = "item-name">Guitar Lesson</h4>
+                            <h5>Price: $899.99</h5>
+                            <h5>In Stock: 02</h5>
                         </div>
                     </div>                               
                 </div>
@@ -390,10 +389,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 600111</h4>
-                            <h3 id = "item-name">Music Lesson Trumpet</h3>
-                            <h4>Price: $799.99</h4>
-                            <h4>In Stock: 03</h4>
+                            <h5>SKU: 600111</h5>
+                            <h4 id = "item-name">Trumpet Lesson</h4>
+                            <h5>Price: $799.99</h5>
+                            <h5>In Stock: 03</h5>
                         </div>
                     </div>                    
                 </div>                  
@@ -413,7 +412,7 @@
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
                             <h4>SKU: 600121</h4>
-                            <h3 id = "item-name">Music Lesson Piano</h3>
+                            <h3 id = "item-name">Piano Lesson</h3>
                             <h4>Price: $999.99</h4>
                             <h4>In Stock: 06</h4>
                         </div>
@@ -426,6 +425,7 @@
             </a>
         </div>
     </div>        
-</div>             
- 
+</div>       
+      
+      
  
