--- a/views/keyboard.handlebars
+++ b/views/keyboard.handlebars
@@ -11,10 +11,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 500101</h4>
-                            <h3 id = "item-name">Casio Keyboard Automatic</h3>
-                            <h4>Price: $673.99</h4>
-                            <h4>In Stock: 06</h4>
+                            <h5>SKU: 500101</h5>
+                            <h4 id = "item-name">Casio Keyboard</h4>
+                            <h5>Price: $673.99</h5>
+                            <h5>In Stock: 06</h5>
                         </div>
                     </div>                                 
                 </div>
@@ -33,10 +33,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 500111</h4>
-                            <h3 id = "item-name">Electric Keyboard General</h3>
-                            <h4>Price: $205.29</h4>
-                            <h4>In Stock: 05</h4>
+                            <h5>SKU: 500111</h5>
+                            <h4 id = "item-name">Electric Keyboard</h4>
+                            <h5>Price: $205.29</h5>
+                            <h5>In Stock: 05</h5>
                         </div>
                     </div>                    
                 </div>                  
@@ -55,10 +55,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 500121</h4>
-                            <h3 id = "item-name">Yahamaha PSP Autotune</h3>
-                            <h4>Price: $539.99</h4>
-                            <h4>In Stock: 03</h4>
+                            <h5>SKU: 500121</h5>
+                            <h4 id = "item-name">Yahamaha Autotune</h4>
+                            <h5>Price: $539.99</h5>
+                            <h5>In Stock: 03</h5>
                         </div>
                     </div>                   
                 </div>                  
