--- a/views/lesson.handlebars
+++ b/views/lesson.handlebars
@@ -11,10 +11,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 600101</h4>
-                            <h3 id = "item-name">Music Lesson Guitar</h3>
-                            <h4>Price: $899.99</h4>
-                            <h4>In Stock: 02</h4>
+                            <h5>SKU: 600101</h5>
+                            <h4 id = "item-name">Guitar Lesson</h4>
+                            <h5>Price: $899.99</h5>
+                            <h5>In Stock: 02</h5>
                         </div>
                     </div>                               
                 </div>
@@ -33,10 +33,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 600111</h4>
-                            <h3 id = "item-name">Music Lesson Trumpet</h3>
-                            <h4>Price: $799.99</h4>
-                            <h4>In Stock: 03</h4>
+                            <h5>SKU: 600111</h5>
+                            <h4 id = "item-name">Trumpet Lesson</h4>
+                            <h5>Price: $799.99</h5>
+                            <h5>In Stock: 03</h5>
                         </div>
                     </div>                    
                 </div>                  
@@ -56,7 +56,7 @@
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
                             <h4>SKU: 600121</h4>
-                            <h3 id = "item-name">Music Lesson Piano</h3>
+                            <h3 id = "item-name">Piano Lesson</h3>
                             <h4>Price: $999.99</h4>
                             <h4>In Stock: 06</h4>
                         </div>
