--- a/views/piano.handlebars
+++ b/views/piano.handlebars
@@ -34,7 +34,7 @@
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
                             <h4>SKU: 100111</h4>
-                            <h3 id = "item-name">Piano Electric Autotune</h3>
+                            <h3 id = "item-name">Piano Electric</h3>
                             <h4>Price: $3854.99</h4>
                             <h4>In Stock: 06</h4>
                         </div>
