--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,7 @@ body{
     background: rgb(13 85 167);
     font-family: sans-serif;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1rem;
     }
     #music-lesson-picture, #keyboard-picture{
         height: 260px;
@@ -31,7 +31,7 @@ body{
        background-color: rgb(13 85 167);
        color: white;
        font-weight: bold;
-       font-size: 25px;
+       font-size: 18px;
    }
    #footer-location-button{
        color: gold;
@@ -361,7 +361,7 @@ body{
 }
 #login-page {
     background: rgb(13 85 167);
-    margin-top: 250px;
+    margin-top: 100px;
     padding:30px;
     padding-left: 100px;
     padding-right: 100px;
@@ -392,7 +392,7 @@ body{
 
 #signup-page {
     background: rgb(13 85 167);
-    margin-top: 180px;
+    margin-top: 12px;
     padding:30px;
     padding-left: 100px;
     padding-right: 100px;
