--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -8,7 +8,7 @@
                             {{#each this}}                                                                  
                                 <h2 id = "category_id">Category Id: {{category_id}}</h2> 
                                 <h3 id = "category-name-id">Category Name: {{category_name}}</h3>
-                                <p id = "category-picture"><img src={{category_picture}} alt="category pictures" width="700" height="700"></p>                                                                    
+                                <p id = "category-picture"><img src={{category_picture}} width="700" height="700"></p>                                                                    
                             {{/each}}
                         </div>
                     </div>
