--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -16,11 +16,17 @@
         <img src="/images/keyboard-category.JPG" href = "keyboard" id = "keyboard-picture" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "keyboard-button" href = "keyboard">Keyboard Category</button>
         </a>
+        
+      </div>
+
+      <div class="cell large-6"  id = "center-column">
+        
+        <img src="/images/placeholder_pic-6.jpg" alt="Image" height="100%" width="100%" id="home-main-pic">
+        <img src="/images/placeholder_pic-7.jpg" alt="Image" height="100%" width="100%" id="home-main-pic">
 
       </div>
-      
-      <div class="cell large-3 large-offset-6"  id = "right-column">
 
+      <div class="cell large-3"  id = "right-column">
         <a href = "drum">
         <img src="/images/drum-percussion-category.JPG" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "drum-percussion-button">Drum and Percussion Category</button>
@@ -34,7 +40,9 @@
         <button class = "button medium" id = "music-lesson-button">Music Lesson Category</button>
         </a>
         
+        
       </div>
     </div>
   </div>
+
   </main>
