--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -6,7 +6,7 @@
                     <div class="media-object-section" id = "product-description">
                         <div >
                             {{#each this}}                                                                  
-                                <p id = "picture-list"><img src={{picture}} alt="Girl in a jacket" width="300" height="200"></p>
+                                <p id = "picture-list"><img src={{picture}} width="300" height="200"></p>
                                 <h4 id = "sku-id">SKU: {{sku}}</h4> 
                                 <h5 id = "product-name-id">Product Name: {{product_name}}</h5>
                                 <h5 id = "price-id">Price: $ {{price}}</h5>
