--- a/views/sound.handlebars
+++ b/views/sound.handlebars
@@ -11,10 +11,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 300101</h4>
-                            <h3 id = "item-name">Yamaha 4 Ch: console</h3>
-                            <h4>Price: $1699.99</h4>
-                            <h4>In Stock: 03</h4>
+                            <h5>SKU: 300101</h5>
+                            <h4 id = "item-name">Yamaha 4 Channel</h4>
+                            <h5>Price: $1699.99</h5>
+                            <h5>In Stock: 03</h5>
                         </div>
                     </div>                             
                 </div>
@@ -55,10 +55,10 @@
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 300121</h4>
-                            <h3 id = "item-name">Yamaha MG16XU Mixer</h3>
-                            <h4>Price: $549.99</h4>
-                            <h4>In Stock: 04</h4>
+                            <h5>SKU: 300121</h5>
+                            <h4 id = "item-name">Yamaha MG16XU</h4>
+                            <h5>Price: $549.99</h5>
+                            <h5>In Stock: 04</h5>
                         </div>
                     </div>                    
                 </div>                  
