updated css style

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,22 @@
+:root {
+    --primary-blue: rgb(13 85 167);
+    --background-text: rgb(9, 9, 121); ;
+    --button-hover: rgb(255, 255, 0);
+    --text-white: rgb(255, 255, 255);
+    --gold-text: rgb(255, 215, 0);
+    --black: rgb(0, 0, 0);
+}
+
+
+
 body{
-    background: rgb(255, 255, 255);
+    background: var(--text-white);
     }
     .main-container{
        display: flex;
     }
     .right-column-container{
-        margin-right: 0px;
+        margin-right: 0rem;
     }
     #piano-button, #guitar-button, #live-sound-button, #drum-percussion-button, #keyboard-button, #music-lesson-button{
     display: inline-block;
@@ -13,14 +24,14 @@ body{
     background: rgb(13 85 167);
     font-family: sans-serif;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.33rem;
     }
     #music-lesson-picture, #keyboard-picture{
-        height: 260px;
+        height: 24rem;
     }
     .store-main-title{
         font-family: sans-serif;
-        color: whitesmoke;
+        color: var(--text-white);
         font-weight: bolder;
     }
 
@@ -28,64 +39,64 @@ body{
 
 .header-text {
     margin-left: 3%;
-    color: aliceblue;
+    color: var(--text-white);
     font-weight: 900;
 
 }   
 
 .menuBar:hover {
-    color:yellow;
+    color: var(--button-hover);
 
 }
 
     .top-bar{
-        background: rgb(13 85 167);
+        background: var(--primary-blue);
     }
 
    .menuBar {
-       background-color: rgb(13 85 167);
-       color: white;
+       background-color: var(--primary-blue);
+       color: var(--text-white);
        font-weight: bold;
        font-size: 1rem;
    }    
    #footer-location-button{
-       color: gold;
+       color: var(--gold-text);
    }
    footer{
-       height: 100px;
-       background: rgb(13 85 167);
-       color: white;
-       padding: 10px;
-       position:fixed;
+       height: 6.25rem;
+       background: var(--primary-blue);
+       color: var(--text-white);
+       padding: .62rem;
+       position: fixed;
         Width: 100%;
         bottom: 0;
    }
    
    #top-navbar{
-       background: rgb(13 85 167);     
+       background: var(--primary-blue);    
    }
    #music-lesson-button:hover{
-    color: yellow;
+    color: var(--button-hover);
     cursor: pointer;  
    }
    #piano-button:hover{
-    color: yellow;
+    color:  var(--button-hover);
     cursor: pointer;  
    }
    #guitar-button:hover{
-    color: yellow;
+    color:  var(--button-hover);
     cursor: pointer;  
    }
    #live-sound-button:hover{
-    color: yellow;
+    color:  var(--button-hover);
     cursor: pointer;  
    }
    #drum-percussion-button:hover{
-    color: yellow;
+    color:   var(--button-hover);
     cursor: pointer;  
    }
    #keyboard-button:hover{
-    color: yellow;
+    color: var(--button-hover);
     cursor: pointer;  
    }
    #footer-location-button{
@@ -104,229 +115,229 @@ body{
     text-align: center;
 }
 #main-display{
-    margin-bottom: 100px;
-    margin-top: 5px;
+    margin-bottom: 6.25rem;
+    margin-top: .33rem;
     
 }
 #piano-1, #piano-2, #piano-3{
-    padding: 10px;
-    background: rgb(255, 255, 255)  
+    padding: 66rem;
+    background: var(--text-white); 
 }
 #category-display{
-    margin-top: 50px;
-    margin-bottom: 100px;
+    margin-top: 3rem;
+    margin-bottom: 6.25rem;
 }
 #piano-1-button{ 
-    background: rgb(13 85 167);    
+    background: var(--primary-blue);   
     margin-left: 9rem; 
-    border-radius: 10px;
+    border-radius: .5rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: 1rem;
+    color: var(--text-white);;
     font-weight: bold;
     border: solid;
-    margin-top: 100px;
+    margin-top: 6.25rem;
     cursor: pointer;   
 }
 #piano-2-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 15rem; 
-    border-radius: 10px;
+    border-radius: .5rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .5rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 220px;
+    margin-top: 13.75rem;
     cursor: pointer;   
 }
 #piano-3-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 9rem; 
-    border-radius: 10px;
+    border-radius: 66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding:66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 0px;
+    margin-top: 0rem;
     cursor: pointer;   
 }
 #guitar-1-button{ 
-    background: rgb(13 85 167);    
+    background: var(--primary-blue);  
     margin-left: 9rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 0px;
+    margin-top: 0rem;
     cursor: pointer;   
 }
 #guitar-2-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 15rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 305px;
+    margin-top: 19rem;
     cursor: pointer;   
 }
 #guitar-3-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 9rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 50px;
+    margin-top: 3.125rem;
     cursor: pointer;   
 }
 #keyboard-1-button{ 
-    background: rgb(13 85 167);    
+    background: var(--primary-blue);
     margin-left: 15rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 20px;
+    margin-top: 1.33rem;
     cursor: pointer;   
 }
 #keyboard-2-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 15rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 20px;
+    margin-top: 1.33rem;
     cursor: pointer;   
 }
 #keyboard-3-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 9rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 0px;
+    margin-top: 0rem;
     cursor: pointer;   
 }
 #drum-1-button{ 
-    background: rgb(13 85 167);    
+    background: var(--primary-blue);    
     margin-left: 9rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 170px;
+    margin-top: 10.62rem;
     cursor: pointer;   
 }
 #drum-2-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 15rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 130px;
+    margin-top: 8.125rem;
     cursor: pointer;   
 }
 #drum-3-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 9rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 0px;
+    margin-top: 0rem;
     cursor: pointer;   
 }
 #sound-1-button{ 
-    background: rgb(13 85 167);    
+    background: var(--primary-blue);  
     margin-left: 9rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 0px;
+    margin-top: 0rem;
     cursor: pointer;   
 }
 #sound-2-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 15rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 30px;
+    margin-top: 2rem;
     cursor: pointer;   
 }
 #sound-3-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 9rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 0px;
+    margin-top: 0rem;
     cursor: pointer;   
 }
 #lesson-1-button{ 
-    background: rgb(13 85 167);    
+    background: var(--primary-blue);   
     margin-left: 9rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
-    margin-top: 0px;
+    margin-top: 0rem;
     cursor: pointer;   
 }
 #lesson-2-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 15rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
     margin-top: 175px;
     cursor: pointer;   
 }
 #lesson-3-button{
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     margin-left: 12rem; 
-    border-radius: 10px;
+    border-radius: .66rem;
     font-size:x-large;
-    padding: 10px;
-    color: honeydew;
+    padding: .66rem;
+    color: var(--text-white);
     font-weight: bold;
     border: solid;
     margin-top: 130px;
@@ -334,7 +345,7 @@ body{
 }
 
 #piano-information{
-    color: rgb(0, 0, 0);
+    color: var(--black);
 }
 #item-name{
     font-weight: bold;
@@ -344,8 +355,8 @@ body{
     font-size: 2rem;
 }
 #button {   
-    background: rgb(13 85 167);
-    color: honeydew;
+    background: var(--primary-blue);
+    color: var(--text-white);
     border-radius: 1rem;
     font-size: 2rem;
     padding: 1rem;
@@ -362,53 +373,53 @@ body{
 
 #login-title, #signup-title{
     font-family: sans-serif;
-    color: white;
+    color: var(--text-white);
     font-weight: bold;   
 }
 #login-page {
-    background: rgb(13 85 167);
-    margin-top: 250px;
-    padding:30px;
-    padding-left: 100px;
-    padding-right: 100px;
-    border-radius: 40px;
+    background: var(--primary-blue);
+    margin-top: 5rem;
+    padding: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: 2rem;
 }
 
 #email-heading, #password-heading, #name-heading, #username-heading {
     font-family: sans-serif;
-    color: white;
+    color: var(--text-white);
     font-weight: bold;
 }
 #email-login, #password-login, #name-signup, #email-signup, #user_id-signup, #password-signup{
-    padding: 5px;
-    border-radius: 5px;
+    padding: .33rem;
+    border-radius: .33rem;
 }
 
 #login-btn, #signup-btn{
-    padding: 5px;
-    padding-left: 30px ;
-    padding-right: 30px;
-    border-radius: 8px;
+    padding: .33rem;
+    padding-left: 2rem ;
+    padding-right: 2rem;
+    border-radius: .5rem;
     font-family: sans-serif;
     font-weight: bolder;
-    color: white;
-    margin-top: 20px;
-    padding-top: 10px;
+    color: var(--text-white);
+    margin-top: 1.25rem;
+    padding-top: .75rem;
 }
 
 #signup-page {
     background: rgb(13 85 167);
-    margin-top: 50px;
-    padding:30px;
-    padding-left: 100px;
-    padding-right: 100px;
-    border-radius: 40px;
+    margin-top: 3rem;
+    padding: 2rem;
+    padding-left: 6.25rem;
+    padding-right: 6.25rem;
+    border-radius: 3rem;
 }
 
 #product-description, #category-description, #user-description{
-    padding: 50px;
+    padding: 3rem;
     font-family: sans-serif;
-    color: rgb(9, 9, 121);
+    color: var(--background-text);
     
 }
 
@@ -419,18 +430,18 @@ body{
     font-weight: bold;
 }
 #information-btn{
-    border-radius: 20px;
-    border: solid rgb(2, 2, 87) 5px;
-    padding: 10px;
-    background: rgb(255, 255, 255)  
+    border-radius: 1rem;
+    border: solid var(--background-text) .3rem;
+    padding: .5rem;
+    background: var(--text-white);
 }
 #category-header{
     font-family: sans-serif;
-    font-size: 40px;
+    font-size: 2rem;
     font-weight: bold;
 }
 #category_id, #user-id{
-    margin-top: 150px;
+    margin-top: 9.375rem;
     font-weight: bold;
 }
 
@@ -440,28 +451,29 @@ body{
 }
 
 #home-main-pic{
-    margin-bottom: 0px;
+    margin-bottom: 0rem;
 }
 
 #advice-button{
     display: inline-block;
     width: 100%;
-    background: rgb(13 85 167);
+    background: var(--primary-blue);
     font-family: cursive;
     font-weight: bold;
-    font-size: 28px;
-    padding-top: 25px;
-    padding-bottom: 25px; 
-    color: gold; 
+    font-size: 2rem;
+    padding-top: 1.5rem; 
+    padding-bottom: 1.5rem; 
+    color: var(--gold-text); 
 }
+
 #advice-button-right{
     display: inline-block;
     width: 100%;
-    background: rgb(13 85 167);
-    font-family:cursive;
+    background: var(--primary-blue);
+    font-family: cursive;
     font-weight: bold;
-    font-size: 28px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    color: gold; 
+    font-size: 1.5rem;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+    color: var(--gold-text); 
 }
