updated seeds and CSS files

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -2,7 +2,7 @@
   <div class="wrap row small-up-1 medium-up-4 large-up-12">
     <div class="column large-offset-2">
         <ul class = "menu" id = top-navbar> 
-          <li><h5 class="menu-text">Product Links:</h5></li>
+          <li><p class="menu-text">Product Links:</p></li>
           <li><a class="menuBar" href = "products">List of Products</a></li>
           <li><a class="menuBar" href = "category">View Categories</a></li>
           <li><a class="menuBar" href = "user">Our Registered Customers</a></li>      
@@ -16,7 +16,7 @@
       
         <ul class = "menu" id = top-navbar> 
 
-          <li><h5 class="menu-text">Locations:</h5></li>
+          <li><p class="menu-text">Locations:</p></li>
           <li><a class="menuBar" href = "https://www.google.com/search?rlz=1C1CHBF_enUS953US953&tbs=lf:1,lf_ui:10&tbm=lcl&sxsrf=AOaemvIwl8l_2AztRiy9d-_gPBKE8gzDAQ:1631592355058&q=miami+shopping+centers&rflfq=1&num=10&ved=2ahUKEwiW1faVy_3yAhUdKVkFHV5bCw4QtgN6BAgbEAQ#rlfi=hd:;si:18115241926405961007;mv:[[25.719071831343403,-80.3415402250283],[25.715567869821335,-80.34958685207297],null,[25.717319863483514,-80.34556353855064],18]" target="_blank">Miami</a></li>
           <li><a class="menuBar" href = "https://www.google.com/search?q=orlando+shopping+centers&rlz=1C1CHBF_enUS953US953&tbm=lcl&sxsrf=AOaemvIpJmdd2sEH0H3B0ncmZLyxMy-txA%3A1631592365371&ei=rR9AYYqNFtCs0PEP5tmsyAE&oq=orlando+shopping+centers&gs_l=psy-ab.1.0.0i512k1j0i5i30k1j0i8i30k1l3.79175.81621.0.84700.7.7.0.0.0.0.218.874.2j4j1.7.0....0...1c.1.64.psy-ab..0.7.874...0i7i30k1j0i7i5i30k1j0i8i7i30k1.0.Vg48aE28qzA#rlfi=hd:;si:13245537337621169283;mv:[[28.994352803002005,-80.20911887974503],[28.119858310964517,-82.26905540318253],null,[28.558013607299394,-81.23908714146378],10]" target="_blank">Orlando</a></li>
           <li><a class="menuBar" href = "https://www.google.com/search?q=tampa+shopping+centers&rlz=1C1CHBF_enUS953US953&tbm=lcl&sxsrf=AOaemvKeQGc8LyZpOLOMaJMqYetUcvr0Mw%3A1631592451678&ei=AyBAYersKJDI0PEPgcKTyA8&oq=Tampa+shopping+centers&gs_l=psy-ab.1.1.0i7i30k1j0i512k1j0i8i30k1l3.175098.176584.0.182288.5.5.0.0.0.0.147.475.0j4.4.0....0...1c.1.64.psy-ab..1.4.473...0i8i7i30k1.0.VIhFpGJP0Zk#rlfi=hd:;si:9757426893539958343;mv:[[28.1287849,-82.3635961],[27.8944859,-82.5926704]]" target="_blank">Tampa</a></li>
