--- a/views/piano.handlebars
+++ b/views/piano.handlebars
@@ -21,11 +21,11 @@
             </div>
              <div class='product-description'> 
              <a href="https://buy.stripe.com/test_aEU8wQerM9Ko9hKbII">
-               <button id="piano-1-button" class="btn">More Information</button>
+               <button id="piano-1-button" class="btn">Product Information</button>
             </a> 
              <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
             </div>
-                <a href="https://buy.stripe.com/test_aEU8wQerM9Ko9hKbII">
+                    <a href="https://buy.stripe.com/test_aEU8wQerM9Ko9hKbII">
                     
                 <button id="piano-2-button" class="btn">Buy Now</button>
             </a>
@@ -47,7 +47,7 @@
                         </div>
                     </div>                    
                     <a href="https://buy.stripe.com/test_14k28sgzUbSw9hKaEF"></a>
-                    <button id="piano-2-button" class="btn">More Information</button>
+                    <button id="piano-2-button" class="btn">Product Information</button>
                     </a> 
                     <div class='product-description'> 
                         <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
